hmecloud/client/src/components/Report/SummaryReport.css
/* ... */
.summaryreport-table{
  font-size: 12px;
}
.summaryreport-table tr th.blankHeader{
  background: none;
  border: 0px;
  height: 23px;
  font-size: 12px;
}

.summaryreport-table tr th.tableHeading{
  background: #959595;
  border-top: 1px solid #FFFFFF;
  border-left: 1px solid #FFFFFF;
  border-right: 1px solid #FFFFFF;
  border-bottom: 0px solid #959595;
  height: 23px;
  font-size: 12px;
}

.groupsColHeader,.storesColHeader{
    background-color: #0087a1;
    border-top: 1px solid #FFFFFF;
    border-left: 1px solid #FFFFFF;
    color: white;
    height: 36px;
    vertical-align: middle;
}

.summaryreport-table th{
  background-color: #0087a1;
  border-top: 1px solid #FFFFFF;
  border-left: 1px solid #FFFFFF;
  color: white;
  height: 36px;
  vertical-align: middle;
}
.summaryreport-table th.groupsColHeader,.summaryreport-table th.storesColHeader{
      width: 125px;
}
/* .summaryreport-table th.reportTableAttributesHeading{
      width: 175px;
} */




.summaryreport-table th.reporttable-attributes-heading-dynamic,
.goalstatistics-table  th.reportTableAttributesHeading{
  width: 125px;
}
.summaryreport-table th.reportTableAttributesHeading10,
.goalstatistics-table tr th.reportTableAttributesHeading10,.reportTableAttributesHeading10{
  width: 85px;
  font-size : 11px !important;
}
.summaryreport-table th.reportTableAttributesHeading11,
.goalstatistics-table  th.reportTableAttributesHeading11,.reportTableAttributesHeading11{
  width: 75px;
  font-size : 11px !important;
}
.summaryreport-table th.reportTableAttributesHeading12,
.goalstatistics-table tr  th.reportTableAttributesHeading12,.reportTableAttributesHeading12{
  width: 70px;
  font-size : 11px !important;
}
.summaryreport-table th.reportTableAttributesHeading13,
.goalstatistics-table  th.reportTableAttributesHeading13,.reportTableAttributesHeading13{
  width: 65px;
  font-size : 11px !important;
}
.summaryreport-table th.reportTableAttributesHeading9,
.goalstatistics-table  th.reportTableAttributesHeading9,.reportTableAttributesHeading9{
  width : 95px;
  font-size : 11px !important;
}
.summaryreport-table th.reportTableAttributesHeading8,
.goalstatistics-table  th.reportTableAttributesHeading8,.reportTableAttributesHeading8{
  width: 105px;
}
.summaryreport-table th.reportTableAttributesHeading7,
.goalstatistics-table  th.reportTableAttributesHeading7,.reportTableAttributesHeading7{
  width: 120px;
}
.summaryreport-table th.reportTableAttributesHeading6,
.goalstatistics-table  th.reportTableAttributesHeading6,.reportTableAttributesHeading6{
  width: 145px;
}

.summaryreport-table th.reportTableAttributesHeading5,
.goalstatistics-table  th.reportTableAttributesHeading5,.reportTableAttributesHeading5{
  width : 175px;
}

.summaryreport-table th.reportTableAttributesHeading5{
  width : 175px;
}

.summaryreport-table th.reporttable-attributes-heading-dynamic{
  width: 125px;
}

.summaryreport-table td{
  border-top: 1px solid #FFFFFF;
  border-left: 1px solid #FFFFFF;
  text-align: center;
  vertical-align: middle;
  height: 42px;
}
.summaryreport-table tr th{
  text-align : center;
}

.asterics{
  color: #D41B3E;
  font-size: 18px;
  line-height: 0;
}

.reports-terms{
  font-size: 12px;
  color: #777777;
  margin-top: 16px;
}
.show-page-toggle{
  font-size: 12px;
  margin-top: 14px;
  font-weight: bold;
}
.show-label{
  font-weight: bold;
  color: black;
}

.goalstatistics-table-section, .systemstatistics-table-section{
      margin-top: 10px;
}
.reportTableAttributesHeading.blank-heading{
  background: none;
  width : 125px;
}


/* .goalStatistics-cover{
  position:absolute;
  left: 15px;
  right: 15px;
  height:1px;
  color: #777777;
} */

.currentMeasure{
  font-size: 10px;
  font-weight: 500;
  color: #D41B3E;
}
.timeSpan{
  color: #D41B3E;
  font-weight: bold;
}

.timeMeasureColumn:hover{
  cursor: pointer;
  text-decoration: underline;
}

/* .goalstatistics-table td{
  width: 175px;
} */

.goalStatistics-row{
  margin-bottom: 5px;
}

h2 .report-start-time, h2 .report-end-time{
  font-size: 14px;
  color: #008898;
  line-height: 20px;
  font-weight: 800;
}
h2 .report-start-time-value,h2 .report-end-time-value{
  color: #008898;
  font-size: 14px;
  line-height: 20px;
  font-weight: 100;
  margin-left: 5px;
  text-transform: uppercase;
}
.store-error{
  font-size: 9px;
  position: absolute;
  color:#d41b3e;
}

.report-start-time-header, .report-end-time-header{
  margin-top:0px;
}
.report-print-time-header{
    color: #959595;
    margin-top : 0px;
}

.report-print-time, .report-print-time-value{
  font-weight: 100;
  text-transform: uppercase;
  text-transform: uppercase;
  font-size: 14px;
  line-height: 20px;
}
.from-to-detail{
  color:#008898;
  /* margin-bottom: 5px; */
  font-size: 12px;
  margin-bottom: 10px;
  font-weight: bold;
  text-transform: uppercase;
}
.show-all-pagination-toggle{
  text-align : right;
  font-size: 12px;
  margin-top: 14px;
  font-weight: bold;
}
.left-padding-none{
  padding-left : 0px;
}
.right-padding-none{
  padding-right : 0px !important;
}
.show-all-single{
  margin-top: -17px;
  text-align: right;
  margin-right: 55px;
}
#page-navigations{
  color: #D41B3E;
  margin-top:12px;
}
.page-navs{
  display : inline-block;
  float:left;
  margin-right: 2px;
}

.previous-link, .next-link{
  float: left;
  border: 1px solid white;
  background-color: red;
  width: 20px;
  height: 20px;
  display : inline-block;
  cursor : pointer;
}
.previous-page{
  font-size: 18px !important;
  color: white;
  margin-left: 5px;
}
.next-page{
  font-size: 18px !important;
  color: white;
  margin-left: 5px;
}
.start-page{
  border: 1px solid #D41B3E;
  padding: 0px 4px 0px 3px;
}
.report-data-unit, .goalstatistics-data-unit{
  margin-top:20px;
}
.active-link{
  color: rgb(0, 136, 152);
  text-decoration: underline;
  cursor: pointer;
}
.inactive-link{
  cursor: pointer;
  color: #D41B3E;
}

.show-all-multi{
  margin-right : 40px;
}
/* ... */

